# timecraft

./: Cargo.toml  INSTRUCTIONS.md  README.md
src/: lib.rs  main.rs
src/analyzers/: audit.rs  fun.rs  mod.rs  stats.rs
src/history/: parser.rs
