[package]
name = "timecraft"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool that analyzes your shell history to surface insights and automate workflows"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
fuzzy-matcher = "0.3"
dirs = "5.0"
colored = "2.1"
indicatif = "0.17"
thiserror = "1.0"
anyhow = "1.0"
rustyline = "13.0"
rand = "0.8"
